@@ -400,6 +400,9 @@
 
 	Fixed processing if-statements with multiple else branches.
 
+	Fixed accepting non-alpha first character for environment variable name in
+	:let command.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
